--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/styles/main.css" />
 <link rel="stylesheet" href="/styles/navbar.css" />
-<link rel="stylesheet" href="/styles/waiting.css" />
+<link rel="stylesheet" href="/styles/specific.css" />
 
 <nav>
   <% if(user){ %>
