project edit css

--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -46,7 +46,7 @@
 
       <div class="flex">
         <div id="linksContainer">
-          <div id="links">
+          <div id="Links">
             <div id="inspo">
               <div id="inside">
                 <p class="noMargin">inspiration board:</p>
@@ -60,13 +60,13 @@
               </div>
             </div>
           </div>
-          <div id="notes">
+          <div id="Notes">
             <p class="noMargin">notes:</p>
             <p class="noMargin"><%= project.notes %></p>
           </div>
         </div>
   
-        <div id="refs">
+        <div id="Refs">
           <div id="imgs" class="flex">
             <% if(project.refs===""){ %>
               <p class="noMargin">No refs for this project</p>
