--- a/public/styles/specific.css
+++ b/public/styles/specific.css
@@ -13,13 +13,13 @@
   border: none;
 }
 
-#refs, #linksContainer{
+#Refs, #linksContainer{
   height: 70vh;
   width: 50%;
   margin: 15px 15px 20px;
 }
 
-#links{
+#Links{
   width: 100%;
   height: 40%;
 }
@@ -36,7 +36,7 @@
   height: 100%;
 }
 
-#notes{
+#Notes{
   width: 100%;
   height: 60%;
 }
@@ -48,7 +48,7 @@
   border-radius: 10px;
 }
 
-#inside, #notes, #refs{
+#inside, #Notes, #Refs{
   text-align: left;
   word-wrap: break-word;
   box-sizing: border-box;
