--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -9,72 +9,79 @@
   <%- include('../partials/_navbar.ejs') %>
   <h1>edit <%= project.name %></h1>
 
-  <form action="<% if(project.status==='waiting'){%>
-    /waitingProjects/submit/<%= folder %>/<%= project._id %>?_method=PUT
-    <%}else if(project.status==='ongoing'){ %>
-      /ongoingProjects/submit/<%= project._id %>?_method=PUT
-    <% } %>" method="POST">
-    <label for="name">project name:</label>
-    <input type="text" name="name" id="name" value="<%= project.name %>"/>
+  <div class="flex">
+    <div class="container">
+      <form action="<% if(project.status==='waiting'){%>
+        /waitingProjects/submit/<%= folder %>/<%= project._id %>?_method=PUT
+        <%}else if(project.status==='ongoing'){ %>
+          /ongoingProjects/submit/<%= project._id %>?_method=PUT
+        <% } %>" method="POST">
+        <label for="name">project name:</label>
+        <input type="text" name="name" id="name" value="<%= project.name %>"/>
+    
+        <br>
+        <br>
+    
+        <label for="inspoBoard">inspiration boards:</label>
+        <input type="url" name="inspoBoard" id="inspoBoard" value="<%= project.inspoBoard %>"/>
+    
+        <br>
+        <br>
+    
+        <label for="refs">References:</label>
+        <input type="text" name="refs" id="refs" value="<%= project.refs %>"/>
+    
+        <br>
+        <br>
+    
+        <label for="links">links:</label>
+        <input type="url" name="links" id="links" value="<%= project.links %>"/>
+    
+        <br>
+        <br>
+    
+        <label for="type">project type</label>
+    
+        <br>
+    
+        <label for="personal">personal project</label>
+        <input type="radio" id="personal" name="type" value="personal" <%= project.type === "personal"? 'checked':''  %> />
+    
+        <br>
+    
+        <label for="commission">personal commission</label>
+        <input type="radio" id="commission" name="type" value="commission" <%= project.type === "commission"? 'checked':''  %>/>
+    
+        <br>
+    
+        <label for="commercial">commercial use commission</label>
+        <input type="radio" id="commercial" name="type" value="commercial" <%= project.type === "commercial"? 'checked':''  %>/>
+    
+        <br>
+    
+        <label for="trade">art trade</label>
+        <input type="radio" id="trade" name="type" value="trade" <%= project.type === "trade"? 'checked':''  %>/>
+    
+        <br>
+    
+        <label for="other">other</label>
+        <input type="radio" id="other" name="type" value="other" <%= project.type === "other"? 'checked':''  %>/>
+    
+        <br>
+        <br>
+    
+        <label for="notes">notes:</label>
+        <textarea name="notes" id="notes" value="<%= project.notes %>"></textarea>
+    
+        <br>
+        <br>
+    
+        <div class="flex">
+          <button class="submit" type="submit">edit project</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
-    <br>
-    <br>
-
-    <label for="inspoBoard">inspiration boards:</label>
-    <input type="url" name="inspoBoard" id="inspoBoard" value="<%= project.inspoBoard %>"/>
-
-    <br>
-    <br>
-
-    <label for="refs">References:</label>
-    <input type="text" name="refs" id="refs" value="<%= project.refs %>"/>
-
-    <br>
-    <br>
-
-    <label for="links">links:</label>
-    <input type="url" name="links" id="links" value="<%= project.links %>"/>
-
-    <br>
-    <br>
-
-    <label for="type">project type</label>
-
-    <br>
-
-    <label for="personal">personal project</label>
-    <input type="radio" id="personal" name="type" value="personal" <%= project.type === "personal"? 'checked':''  %> />
-
-    <br>
-
-    <label for="commission">personal commission</label>
-    <input type="radio" id="commission" name="type" value="commission" <%= project.type === "commission"? 'checked':''  %>/>
-
-    <br>
-
-    <label for="commercial">commercial use commission</label>
-    <input type="radio" id="commercial" name="type" value="commercial" <%= project.type === "commercial"? 'checked':''  %>/>
-
-    <br>
-
-    <label for="trade">art trade</label>
-    <input type="radio" id="trade" name="type" value="trade" <%= project.type === "trade"? 'checked':''  %>/>
-
-    <br>
-
-    <label for="other">other</label>
-    <input type="radio" id="other" name="type" value="other" <%= project.type === "other"? 'checked':''  %>/>
-
-    <br>
-    <br>
-
-    <label for="notes">notes:</label>
-    <textarea name="notes" id="notes" value="<%= project.notes %>"></textarea>
-
-    <br>
-    <br>
-
-    <button type="submit">edit project</button>
-  </form>
 </body>
 </html>
