--- a/views/ongoingProjects/index.ejs
+++ b/views/ongoingProjects/index.ejs
@@ -11,9 +11,15 @@
 
   <% projects.forEach((project)=>{ %>
     <% if(project.status==="ongoing") {%>
-    <a href="/ongoingProjects/project/<%= project._id %>"><%= project.name %></a>
+
+      <div class="flex">
+        <div class="card flex">
+          <a href="/ongoingProjects/project/<%= project._id %>"><%= project.name %></a>
+        </div>
+      </div>
+
     <br>
-    <br>
+
   <% }}) %>
 
 </body>
