--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,11 @@
     <%- include('./partials/_navbar.ejs') %>
     <% if (user) { %>
       <h1><span class="bold"><%= user.username %></span>! your journey begins here!</h1>
+
+      <form action="/ongoingProjects/test" method="post" enctype="multipart/form-data">
+        <input type="file" name="test">
+        <button class="submit" type="submit">Add</button>
+      </form>
     <% }else{ %>
       <div class="screen">
         <h1>Sign up or sign in to start your art journey</h1>
