--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
     <% if (user) { %>
       <h1><span class="bold"><%= user.username %></span>! your journey begins here!</h1>
 
-      <form action="/ongoingProjects/test" method="post" enctype="multipart/form-data">
+      <!-- <form action="/ongoingProjects/test" method="post" enctype="multipart/form-data">
         <input type="file" name="test">
         <button class="submit" type="submit">Add</button>
-      </form>
+      </form> -->
 
     <% }else{ %>
       <div class="screen">
